--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -9,8 +9,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Nagul Calculator" />
-    <meta name="author" content="Nagul Meera" />
+    <meta name="description" content="sanjana" />
+    <meta name="author" content="sanjana" />
     <meta
       name="Keywords"
       content="
@@ -81,7 +81,7 @@
                 <input
                   type="button"
                   value=" C "
-                  onclick="my_calculator.answ.value = '' "
+                  onclick="sanjana.answ.value = '' "
                 />
               </div>
 
@@ -89,7 +89,7 @@
                 <input
                   type="button"
                   value=" 0 "
-                  onclick="my_calculator.answ.value += '0' "
+                  onclick="sanjana.answ.value += '0' "
                 />
               </div>
 
@@ -97,7 +97,7 @@
                 <input
                   type="button"
                   value=" = "
-                  onclick="my_calculator.answ.value =  eval(my_calculator.answ.value.replace(/\s/g, ''))"
+                  onclick="sanjana.answ.value =  eval(my_calculator.answ.value.replace(/\s/g, ''))"
                 />
               </div>
 
@@ -105,7 +105,7 @@
                 <input
                   type="button"
                   value=" / "
-                  onclick="my_calculator.answ.value += '/' "
+                  onclick="sanjana.answ.value += '/' "
                 />
               </div>
             </div>
@@ -116,7 +116,7 @@
                 <input
                   type="button"
                   value=" 1 "
-                  onclick="my_calculator.answ.value += '1' "
+                  onclick="sanjana.answ.value += '1' "
                 />
               </div>
 
@@ -124,7 +124,7 @@
                 <input
                   type="button"
                   value=" 2 "
-                  onclick="my_calculator.answ.value += '2' "
+                  onclick="sanjana.answ.value += '2' "
                 />
               </div>
 
@@ -132,7 +132,7 @@
                 <input
                   type="button"
                   value=" 3 "
-                  onclick="my_calculator.answ.value += '3' "
+                  onclick="sanjana.answ.value += '3' "
                 />
               </div>
 
@@ -140,7 +140,7 @@
                 <input
                   type="button"
                   value=" * "
-                  onclick="my_calculator.answ.value += '*' "
+                  onclick="sanjana.answ.value += '*' "
                 />
               </div>
             </div>
@@ -151,7 +151,7 @@
                 <input
                   type="button"
                   value=" 4 "
-                  onclick="my_calculator.answ.value += '4' "
+                  onclick="sanjana.answ.value += '4' "
                 />
               </div>
 
@@ -159,7 +159,7 @@
                 <input
                   type="button"
                   value=" 5 "
-                  onclick="my_calculator.answ.value += '5' "
+                  onclick="sanjana.answ.value += '5' "
                 />
               </div>
 
@@ -167,7 +167,7 @@
                 <input
                   type="button"
                   value=" 6 "
-                  onclick="my_calculator.answ.value += '6' "
+                  onclick="sanjana.answ.value += '6' "
                 />
               </div>
 
@@ -175,7 +175,7 @@
                 <input
                   type="button"
                   value=" - "
-                  onclick="my_calculator.answ.value += '-' "
+                  onclick="sanjana.answ.value += '-' "
                 />
               </div>
             </div>
@@ -186,7 +186,7 @@
                 <input
                   type="button"
                   value=" 7 "
-                  onclick="my_calculator.answ.value += '7' "
+                  onclick="sanjana.answ.value += '7' "
                 />
               </div>
 
@@ -194,7 +194,7 @@
                 <input
                   type="button"
                   value=" 8 "
-                  onclick="my_calculator.answ.value += '8' "
+                  onclick="sanjana.answ.value += '8' "
                 />
               </div>
 
@@ -202,7 +202,7 @@
                 <input
                   type="button"
                   value=" 9 "
-                  onclick="my_calculator.answ.value += '9' "
+                  onclick="sanjana.answ.value += '9' "
                 />
               </div>
 
@@ -210,7 +210,7 @@
                 <input
                   type="button"
                   value=" + "
-                  onclick="my_calculator.answ.value += '+' "
+                  onclick="sanjana.answ.value += '+' "
                 />
               </div>
             </div>
