--- a/views/page/index.ejs
+++ b/views/page/index.ejs
@@ -71,7 +71,7 @@
 
 <div class="card-body bg-transparent"> <-->
         <span class="border p-4">
-          <form name="my_calculator">
+          <form name="sanjana">
             <div class="text-center pb-3">
               <input type="text" name="answ" />
             </div>
@@ -97,7 +97,7 @@
                 <input
                   type="button"
                   value=" = "
-                  onclick="sanjana.answ.value =  eval(my_calculator.answ.value.replace(/\s/g, ''))"
+                  onclick="sanjana.answ.value =  eval(sanjana.answ.value.replace(/\s/g, ''))"
                 />
               </div>
 
